# mage-mcp-server

./: .env.example  .gitignore  LICENSE  Makefile  README.md  __init__.py  dev.py  pyproject.toml  run_server.py
mage_mcp/: run_server.py
mage_mcp/server/: mage_mcp_server.py
server/: __init__.py
tests/: mock_api_server.py  test_mage_mcp.py
